--- a/index.html
+++ b/index.html
@@ -6,6 +6,57 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    
+  <div class="top">
+  <header>PUETRO RICO AIRLINES</header>  
+  <nav>
+    <a href="/html/">HOME</a> |
+    <a href="/css/">FLIGHTS</a> |
+    <a href="/js/">SUPPORT</a> |
+    <a href="/python/">LOGIN</a>
+  </nav>
+  </div>  
+  
+  <div class="mains">
+
+
+  <div class="flights">
+    <h2>Flights</h2>
+      <p>Come check out or sweet flights! Direct flights available daily!</p>
+      <p class="para">Lets go</p>
+  </div>
+
+  <div class="group">
+    <h2>Group Trips</h2>
+      <p>We offer great group rates! For families with 4 memebers
+        to huge gatherings with 50+!
+      </p>
+       <p class="para">Group rates</p>
+  </div>
+
+  <div class="discount">
+    <h2>Discount Flights</h2>
+      <p>Discount flights available for individuals! Single chair
+        filler tickets for low rates!
+      </p>
+      <p class="para">Jump in</p>
+  </div>
+
+  </div>
+  <br>
+
+  <div class="about">
+    <h2>About us</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut dolor magni 
+          sed laboriosam molestias consectetur exercitationem, corporis quibusdam 
+          veniam, ratione numquam hic ea. Aliquid voluptatum dolore reiciendis blanditiis
+          iste adipisci.
+      </p>
+      <p>Learn More</p>
+  </div>
+
+
+
 
   </body>
 </html>
