css and html edits

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <body>
     
   <div class="top">
-  <header>PUETRO RICO AIRLINES</header>  
-  <nav>
-    <a href="/html/">HOME</a> |
-    <a href="/css/">FLIGHTS</a> |
-    <a href="/js/">SUPPORT</a> |
-    <a href="/python/">LOGIN</a>
+  <header>PUETRO RICO AIRLINES</header>
+    <p>HOME</p>
+    <p>FLIGHTS</p>
+    <p>SUPPORT</p>
+    <p>LOGIN</p>
   </nav>
   </div>  
   
@@ -31,7 +30,7 @@
       <p>We offer great group rates! For families with 4 memebers
         to huge gatherings with 50+!
       </p>
-       <p class="para">Group rates</p>
+       <p class="para">Group Rates</p>
   </div>
 
   <div class="discount">
@@ -52,11 +51,8 @@
           veniam, ratione numquam hic ea. Aliquid voluptatum dolore reiciendis blanditiis
           iste adipisci.
       </p>
-      <p>Learn More</p>
+      <p class="para">Learn More</p>
   </div>
-
-
-
 
   </body>
 </html>
